# latency-tester

./: README.md  settings.gradle.kts
app/: Plan.md  build.gradle.kts
app/src/androidTest/java/org/acoustixaudio/opiqo/latencytester/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChecker.cpp  CMakeLists.txt
app/src/main/java/org/acoustixaudio/opiqo/latencytester/: AudioChecker.kt  AudioChecksViewModel.kt  MainActivity.kt
app/src/main/java/org/acoustixaudio/opiqo/latencytester/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/org/acoustixaudio/opiqo/latencytester/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
